--- a/source/TodoistReview/packages.config
+++ b/source/TodoistReview/packages.config
@@ -15,5 +15,5 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
-  <package id="RestSharp" version="105.2.3" targetFramework="net452" />
+  <package id="RestSharp" version="105.2.3" targetFramework="net452" requireReinstallation="true" />
 </packages>
