--- a/source/TodoistReview/packages.config
+++ b/source/TodoistReview/packages.config
@@ -12,5 +12,5 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net471" />
-  <package id="RestSharp" version="105.2.3" targetFramework="net452" requireReinstallation="true" />
+  <package id="RestSharp" version="105.2.3" targetFramework="net471" />
 </packages>
