--- a/source/TodoistReview/TodoistReview.csproj
+++ b/source/TodoistReview/TodoistReview.csproj
@@ -104,6 +104,8 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\icon.ico" />
+    <Content Include="Content\icon.png" />
     <Content Include="Content\reviewapp.css">
       <DependentUpon>reviewapp.less</DependentUpon>
     </Content>
@@ -127,6 +129,7 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
+    <Content Include="manifest.json" />
     <None Include="Properties\PublishProfiles\TodoistReviewApp - Web Deploy.pubxml" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
