--- a/source/TodoistReview/packages.config
+++ b/source/TodoistReview/packages.config
@@ -1,17 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="bootstrap" version="3.3.7" targetFramework="net452" />
+  <package id="bootstrap" version="4.1.3" targetFramework="net471" />
   <package id="jQuery" version="3.2.1" targetFramework="net452" />
   <package id="knockoutjs" version="3.4.2" targetFramework="net452" />
-  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi" version="5.2.4" targetFramework="net471" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.4" targetFramework="net471" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.4" targetFramework="net471" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.4" targetFramework="net471" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.6" targetFramework="net471" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.6" targetFramework="net471" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.6" targetFramework="net471" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.6" targetFramework="net471" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.6" targetFramework="net471" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.6" targetFramework="net471" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.6" targetFramework="net471" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net471" />
-  <package id="RestSharp" version="106.2.1" targetFramework="net471" />
+  <package id="popper.js" version="1.14.0" targetFramework="net471" />
+  <package id="RestSharp" version="106.3.1" targetFramework="net471" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net471" />
 </packages>
