--- a/source/Taurit.TodoistTools.Review/wwwroot/manifest.json
+++ b/source/Taurit.TodoistTools.Review/wwwroot/manifest.json
@@ -7,7 +7,7 @@
   "theme_color": "#2196F3",
   "icons": [
     {
-      "src": "/Content/icon.png",
+      "src": "/images/icon.png",
       "sizes": "256x256",
       "type": "image/png"
     }
