Allow edit task's content during review

--- a/source/Taurit.TodoistTools.Review/Taurit.TodoistTools.Review.csproj
+++ b/source/Taurit.TodoistTools.Review/Taurit.TodoistTools.Review.csproj
@@ -30,6 +30,9 @@
     <Content Update="wwwroot\css\reviewapp.min.css">
       <DependentUpon>reviewapp.css</DependentUpon>
     </Content>
+    <Content Update="wwwroot\lib\jquery-3.4.1.min.js">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
