--- a/source/Taurit.TodoistTools.Review/Taurit.TodoistTools.Review.csproj
+++ b/source/Taurit.TodoistTools.Review/Taurit.TodoistTools.Review.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TypeScriptToolsVersion>Latest</TypeScriptToolsVersion>
   </PropertyGroup>
 
   <ItemGroup>
