--- a/.github/workflows/master_todoistreview.yml
+++ b/.github/workflows/master_todoistreview.yml
@@ -24,7 +24,7 @@ jobs:
         dotnet-version: '3.1.301'
 
     - name: Build with dotnet
-      run: dotnet build --configuration Release
+      run: dotnet build source/TodoistReview.sln --configuration Release
 
     - name: dotnet publish
       run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
