--- a/.github/workflows/master_todoistreview.yml
+++ b/.github/workflows/master_todoistreview.yml
@@ -27,7 +27,7 @@ jobs:
       run: dotnet build source/TodoistReview.sln --configuration Release
 
     - name: dotnet publish
-      run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+      run: dotnet publish source/TodoistReview.sln -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
     - name: Run Azure webapp deploy action using publish profile credentials
       uses: azure/webapps-deploy@v2
