Enable Application Insights

--- a/source/Taurit.TodoistTools.Review/appsettings.json
+++ b/source/Taurit.TodoistTools.Review/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ApplicationInsights": {
+    "InstrumentationKey": "1e9f5bef-c011-4545-a129-d1cf765df91c"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
