Switch to a chiseled base image to learn if I like it long-term, or it makes development significantly harder

--- a/source/Dockerfile
+++ b/source/Dockerfile
@@ -1,5 +1,6 @@
 # BUILD:
-# docker build -f ./Dockerfile -t review:latest .
+# docker image prune
+# docker build --pull --no-cache -f ./Dockerfile -t review:latest .
 #
 # CLEAN:
 # docker stop review
@@ -8,7 +9,9 @@
 # RUN:
 # docker run --detach --name review -p 8888:80/tcp --restart unless-stopped --env-file .env review:latest
 
-FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
+# TODO: when .NET 8 is out and I migrate, I might want to try image like 8.0.0-jammy-chiseled (stable! not nightly). I expect it to take less space and be more secure (all redundant tools removed). Here it's alsow working for .NET7, but it uses nightly/unstable builds:
+FROM mcr.microsoft.com/dotnet/nightly/aspnet:7.0-jammy-chiseled AS base
+#FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
 WORKDIR /app
 EXPOSE 80
 
