Move from Docker to Windows service

--- a/source/Taurit.TodoistTools.Review/Taurit.TodoistTools.Review.csproj
+++ b/source/Taurit.TodoistTools.Review/Taurit.TodoistTools.Review.csproj
@@ -7,6 +7,7 @@
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Lindhart.Analyser.MissingAwaitWarning" Version="*" />
+		<PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="7.0.1" />
 		<PackageReference Include="Microsoft.TypeScript.MSBuild" Version="5.2.2">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
